[tool.poetry]
name = "pythonproj"
version = "0.1.0"
description = "A blanket project for python experiments"
authors = ["rajagopal <rajagopal.sarathi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
duckdb = "^0.8.1"
openai = "^0.27.8"
langchain = "^0.0.253"
sentence-transformers = "^2.2.2"
unstructured = "*"
chromadb = "*"
tiktoken = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
